src/test/run-pass/new-vstore-mut-box-syntax.rs
fn main() {
    let x: @mut [int] = @mut [ 1, 2, 3 ];

}

